[package]
authors = ["hill <hill@hilll.dev>"]
description = "vkfetch-rs is a fetch-program that displays basic information about your vulkan-compatible graphic card(s)!"
edition = "2021"
keywords = ["vulkan", "neofetch", "gpu", "fetch"]
license = "AGPL-3.0"
repository = "https://github.com/float3/vkfetch-rs"
version = "0.2.0"
name = "vkfetch-rs"
categories = ["command-line-utilities"]
readme = "README.md"

[features]
default = ["ash/linked"]
loaded = ["ash/loaded"]

[dependencies]
ash = { version = "0.38.0", default-features = false, features = ["std"] }

[build-dependencies]
pkg-config = "0.3.31"
