[package]
authors = ["hill <hill@hilll.dev>"]
description = "vkfetch-rs is a fetch-program that displays basic information about your vulkan-compatible graphic card(s)!"
edition = "2024"
keywords = ["vulkan", "neofetch", "gpu", "fetch"]
license = "AGPL-3.0"
repository = "https://github.com/float3/vkfetch-rs"
version = "0.2.5"
name = "vkfetch-rs"
categories = ["command-line-utilities"]
readme = "README.md"

[features]
default = ["ash/linked"]
loaded = ["ash/loaded"]

[dependencies]
ash = { version = "0.38.0", default-features = false, features = ["std"] }
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", default-features = false, features = [
    "handleapi",
    "consoleapi",
    "processenv",
    "winbase",
] }
